AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/Farm_Field_Crop__c.object-meta.xml
<CustomObject>
    <label>Farm Field Crop</label>
    <nameField>
        <displayFormat>FFC-{0000}</displayFormat>
        <label>Farm Field Crop Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farm Field Crop</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>