AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/Crop_Disease__c.field-meta.xml
<CustomField>
    <fullName>Crop_Disease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crop Disease</label>
    <referenceTo>Crop_Disease__c</referenceTo>
    <relationshipLabel>Farm Field Crop</relationshipLabel>
    <relationshipName>Farm_Field_Crop</relationshipName>
    <type>Lookup</type>
</CustomField>