AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/Estimated_Harvesting_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Harvesting_Date__c</fullName>
    <formula>Planting_or_Sowing_Date__c +  Farm_Crop__r.Crop__r.Harvest_Time_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Harvesting Date</label>
    <type>Date</type>
</CustomField>