AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/Farm_Crop__c.field-meta.xml
<CustomField>
    <fullName>Farm_Crop__c</fullName>
    <label>Farm Crop</label>
    <referenceTo>Farm_Crop__c</referenceTo>
    <relationshipLabel>Farm Field Crop</relationshipLabel>
    <relationshipName>Farm_Field_Crop</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>