AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/Farm_Field__c.field-meta.xml
<CustomField>
    <fullName>Farm_Field__c</fullName>
    <label>Farm Field</label>
    <referenceTo>Farm_Field__c</referenceTo>
    <relationshipLabel>Farm Field Crop</relationshipLabel>
    <relationshipName>Farm_Field_Crop</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>