AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/Percentage_Progress__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Progress__c</fullName>
    <formula>IF(
ISBLANK(Planting_or_Sowing_Date__c) || ISBLANK(Estimated_Harvesting_Date__c),
0,
IF(
Estimated_Harvesting_Date__c &lt;= Planting_or_Sowing_Date__c,
0,
MAX(
0,
MIN(
1,
(TODAY() - Planting_or_Sowing_Date__c) / (Estimated_Harvesting_Date__c - Planting_or_Sowing_Date__c)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>