AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/Planting_or_Sowing_Date__c.field-meta.xml
<CustomField>
    <fullName>Planting_or_Sowing_Date__c</fullName>
    <label>Planting or Sowing Date</label>
    <type>Date</type>
</CustomField>