AgTenplate/force-app/main/default/objects/Farm_Field_Crop__c/fields/theme__c.field-meta.xml
<CustomField>
    <fullName>theme__c</fullName>
    <formula>IF(ISBLANK(Crop_Disease__c), &apos;brand&apos;, &apos;error&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>theme</label>
    <type>Text</type>
</CustomField>